--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -1,11 +1,15 @@
 name: e2e
 
-# on:
-#   pull_request:
-#     branches: [ 'main', 'release-*' ]
-on: 
+on:
+  pull_request:
+    branches: [ 'main', 'release-*' ]
   push:
     branches: [ 'main', 'release-*' ,'test*' ,'temp*' ]
+
+defaults:
+  run:
+    shell: bash
+
 env:
   # https://github.com/google/go-containerregistry/pull/125 allows insecure registry for
   # '*.local' hostnames. This works both for `ko` and our own tag-to-digest resolution logic,
@@ -26,9 +30,9 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3 #This action checks-out SERVING repo under $GITHUB_WORKSPACE , so your workflow can access it
 
-    - name: Set up Go 1.19.x
+    - name: Set up Go 1.19.x #This action sets up a go environment for use in actions by: Optionally downloading and caching a version of Go by version and adding to PATH
       uses: actions/setup-go@v3
       with:
         go-version: 1.19.x
@@ -38,7 +42,7 @@ jobs:
         mkdir -p ~/artifacts/build
         mkdir -p ~/artifacts/registry
 
-    - uses: actions/cache@v3
+    - uses: actions/cache@v3 #This action allows caching dependencies and build outputs to improve workflow execution time.
       with:
         path: |
           ~/.cache/go-build
@@ -51,16 +55,16 @@ jobs:
     - name: Install ko
       uses: ko-build/setup-ko@v0.6
 
-    - name: Setup Registry
-      run: |
-        docker run -d --restart=always \
-          -p $REGISTRY_PORT:$REGISTRY_PORT \
-          -v ~/artifacts/registry:/var/lib/registry \
-          --name $REGISTRY_NAME registry:2
+    # - name: Setup Registry
+    #   run: |
+    #     docker run -d --restart=always \
+    #       -p $REGISTRY_PORT:$REGISTRY_PORT \
+    #       -v ~/artifacts/registry:/var/lib/registry \
+    #       --name $REGISTRY_NAME registry:2
 
-        # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
-        # local reigstry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
-        sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
+    #     # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
+    #     # local reigstry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
+    #     sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
 
     - name: Build Knative
       run: |
@@ -101,7 +105,24 @@ jobs:
         - runtime
         - api
         - e2e
-        
+
+        # include:
+        #   # Map between K8s and KinD versions.
+        #   # This is attempting to make it a bit clearer what's being tested.
+        #   # See: https://github.com/kubernetes-sigs/kind/releases
+        #   #      https://hub.docker.com/r/kindest/node/tags
+        # - k8s-version: v1.25.9
+        #   kind-version: v0.19.0
+        #   kind-image-sha: sha256:c08d6c52820aa42e533b70bce0c2901183326d86dcdcbedecc9343681db45161
+
+        # - k8s-version: v1.26.4
+        #   kind-version: v0.19.0
+        #   kind-image-sha: sha256:f4c0d87be03d6bea69f5e5dc0adb678bb498a190ee5c38422bf751541cebe92e
+
+        # - k8s-version: v1.27.1
+        #   kind-version: v0.19.0
+        #   kind-image-sha: sha256:b7d12ed662b873bd8510879c1846e87c7e676a79fefc93e17b2a52989d3ff42b
+
         # Disabled due to consistent failures
         # - ingress: gateway_istio
         #   ingress-class: gateway-api
@@ -146,24 +167,23 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
-
-    # - name: Setup KinD
-    #   uses: chainguard-dev/actions/setup-kind@main
-    #   with:
-    #     k8s-version: ${{ matrix.k8s-version }}
-    #     kind-worker-count: 1
     
-    - name: SetUp Kind Cluster
+    - name: Setup KinD
       uses: chainguard-dev/actions/setup-kind@main
       with:
         k8s-version: ${{ matrix.k8s-version }}
-        kind-worker-count: 3
+        kind-worker-count: 4
         #cluster-suffix: "${CLUSTER_SUFFIX}"
 
     - name: Install Dependencies
       run: |
         set -x
-        
+        # echo "::group:: install kind ${KIND_VERSION}"
+        # curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/v${KIND_VERSION}/kind-linux-amd64
+        # chmod +x ./kind
+        # sudo mv kind /usr/local/bin
+        # echo "::endgroup::"
+
         echo "::group:: install gotestsum ${GOTESTSUM_VERSION}"
         curl -L https://github.com/gotestyourself/gotestsum/releases/download/v${GOTESTSUM_VERSION}/gotestsum_${GOTESTSUM_VERSION}_linux_amd64.tar.gz | tar xzf - gotestsum
         chmod +x ./gotestsum
@@ -190,18 +210,108 @@ jobs:
       with:
         name: artifacts
         path: ~/artifacts
-        
-#     - name: Setup local registry
-#       run: |
-#         # Run a registry.
-#         docker run -d --restart=always \
-#           -v $HOME/artifacts/registry:/var/lib/registry \
-#           -p $REGISTRY_PORT:$REGISTRY_PORT --name $REGISTRY_NAME registry:2
-#         # Connect the registry to the KinD network.
-#         docker network connect "kind" $REGISTRY_NAME
-#         # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
-#         # local registry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
-#         sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
+
+    # - name: Configure KinD Cluster
+    #   run: |
+    #     set -x
+
+    #     # Disable swap otherwise memory enforcement doesn't work
+    #     # See: https://kubernetes.slack.com/archives/CEKK1KTN2/p1600009955324200
+    #     sudo swapoff -a
+    #     sudo rm -f /swapfile
+
+    #     # Use in-memory storage to avoid etcd server timeouts.
+    #     # https://kubernetes.slack.com/archives/CEKK1KTN2/p1615134111016300
+    #     # https://github.com/kubernetes-sigs/kind/issues/845
+    #     sudo mkdir -p /tmp/etcd
+    #     sudo mount -t tmpfs tmpfs /tmp/etcd
+
+    #     # KinD configuration.
+    #     cat > kind.yaml <<EOF
+    #     apiVersion: kind.x-k8s.io/v1alpha4
+    #     kind: Cluster
+
+    #     # Configure registry for KinD.
+    #     containerdConfigPatches:
+    #     - |-
+    #       [plugins."io.containerd.grpc.v1.cri".registry.mirrors."$REGISTRY_NAME:$REGISTRY_PORT"]
+    #         endpoint = ["http://$REGISTRY_NAME:$REGISTRY_PORT"]
+    #       [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
+    #         endpoint = ["https://mirror.gcr.io"]
+
+    #     # This is needed in order to support projected volumes with service account tokens.
+    #     # See: https://kubernetes.slack.com/archives/CEKK1KTN2/p1600268272383600
+    #     kubeadmConfigPatches:
+    #       - |
+    #         kind: ClusterConfiguration
+    #         metadata:
+    #           name: config
+    #         apiServer:
+    #           extraArgs:
+    #             "service-account-issuer": "kubernetes.default.svc"
+    #             "service-account-signing-key-file": "/etc/kubernetes/pki/sa.key"
+    #         networking:
+    #           dnsDomain: "${CLUSTER_DOMAIN}"
+
+    #     nodes:
+    #     - role: control-plane
+    #       image: kindest/node:${{ matrix.k8s-version }}@${{ matrix.kind-image-sha }}
+    #       extraMounts:
+    #       - containerPath: /var/lib/etcd
+    #         hostPath: /tmp/etcd
+    #     - role: worker
+    #       image: kindest/node:${{ matrix.k8s-version }}@${{ matrix.kind-image-sha }}
+    #     - role: worker
+    #       image: kindest/node:${{ matrix.k8s-version }}@${{ matrix.kind-image-sha }}
+    #     - role: worker
+    #       image: kindest/node:${{ matrix.k8s-version }}@${{ matrix.kind-image-sha }}
+    #     - role: worker
+    #       image: kindest/node:${{ matrix.k8s-version }}@${{ matrix.kind-image-sha }}
+    #     EOF
+
+    #     kind create cluster --config kind.yaml --wait 5m
+
+    # - name: Install metallb
+    #   shell: bash
+    #   run: |
+    #     # Install metallb
+    #     # disable the webhook-mode because there is a bug:https://github.com/metallb/metallb/issues/1597
+    #     # this webhook only checks crd, it has not effects to out e2e tests
+    #     curl https://raw.githubusercontent.com/metallb/metallb/v0.13.5/config/manifests/metallb-native.yaml -k | \
+    #      sed '0,/args:/s//args:\n        - --webhook-mode=disabled/' | \
+    #      sed '/apiVersion: admissionregistration/,$d' | \
+    #      kubectl apply -f -
+
+    #     # Add Layer 2 config
+    #     network=$(docker network inspect kind -f "{{(index .IPAM.Config 0).Subnet}}" | cut -d '.' -f1,2)
+    #     cat <<EOF | kubectl apply -f -
+    #     apiVersion: metallb.io/v1beta1
+    #     kind: IPAddressPool
+    #     metadata:
+    #       name: first-pool
+    #       namespace: metallb-system
+    #     spec:
+    #       addresses:
+    #       - $network.255.1-$network.255.250
+    #     ---
+    #     apiVersion: metallb.io/v1beta1
+    #     kind: L2Advertisement
+    #     metadata:
+    #       name: example
+    #       namespace: metallb-system
+    #     EOF
+
+    - name: Setup local registry
+      run: |
+        # Run a registry.
+        docker run -d --restart=always \
+          -v $HOME/artifacts/registry:/var/lib/registry \
+          -p $REGISTRY_PORT:$REGISTRY_PORT --name $REGISTRY_NAME registry:2
+        # Connect the registry to the KinD network.
+        docker network connect "kind" $REGISTRY_NAME
+        # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
+        # local registry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
+        sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
 
     - name: Install Serving & Ingress
       run: |
@@ -230,7 +340,7 @@ jobs:
           -skip-cleanup-on-fail \
           ${{ matrix.test-flags || '-enable-alpha -enable-beta' }} \
           --ingress-class=${{ matrix.ingress-class || matrix.ingress }}.ingress.networking.knative.dev
-  
+
     - uses: chainguard-dev/actions/kind-diag@main
       # Only upload logs on failure.
       if: ${{ failure() }}
