--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -92,13 +92,13 @@ jobs:
       matrix:
         k8s-version:
         - v1.25.x
-        - v1.26.x
-        - v1.27.x
+        # - v1.26.x
+        # - v1.27.x
 
         ingress:
-        - kourier
-        - kourier-tls
-        - istio
+        # - kourier
+        # - kourier-tls
+        # - istio
         - contour
         # Disabled due to consistent failures
         # - gateway_istio
@@ -302,17 +302,17 @@ jobs:
     #       namespace: metallb-system
     #     EOF
 
-    # - name: Setup local registry
-    #   run: |
-    #     # Run a registry.
-    #     docker run -d --restart=always \
-    #       -v $HOME/artifacts/registry:/var/lib/registry \
-    #       -p $REGISTRY_PORT:$REGISTRY_PORT --name $REGISTRY_NAME registry:2
-    #     # Connect the registry to the KinD network.
-    #     docker network connect "kind" $REGISTRY_NAME
-    #     # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
-    #     # local registry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
-    #     sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
+    - name: Setup local registry
+      run: |
+        # Run a registry.
+        docker run -d --restart=always \
+          -v $HOME/artifacts/registry:/var/lib/registry \
+          -p $REGISTRY_PORT:$REGISTRY_PORT --name $REGISTRY_NAME registry:2
+        # Connect the registry to the KinD network.
+        docker network connect "kind" $REGISTRY_NAME
+        # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
+        # local registry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
+        sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
 
     - name: Install Serving & Ingress
       run: |
