--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -14,7 +14,7 @@ env:
   # https://github.com/google/go-containerregistry/pull/125 allows insecure registry for
   # '*.local' hostnames. This works both for `ko` and our own tag-to-digest resolution logic,
   # thus allowing us to test without bypassing tag-to-digest resolution.
-  CLUSTER_DOMAIN: c${{ github.run_id }}.local
+  #CLUSTER_DOMAIN: c${{ github.run_id }}.local
   REGISTRY_NAME: registry.local
   REGISTRY_PORT: 5000
   KO_DOCKER_REPO: registry.local:5000/knative
@@ -62,11 +62,11 @@ jobs:
         docker run -d --restart=always \
           -p $REGISTRY_PORT:$REGISTRY_PORT \
           -v ~/artifacts/registry:/var/lib/registry \
-          --name $REGISTRY_NAME registry:2
+          --name $REGISTRY_NAME-test registry:2
 
         # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
         # local reigstry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
-        sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
+        sudo echo "127.0.0.1 $REGISTRY_NAME-test" | sudo tee -a /etc/hosts
 
     - name: Build Knative
       run: |
@@ -104,8 +104,8 @@ jobs:
         # - gateway_istio
 
         test-suite:
-        - runtime
-        - api
+        # - runtime
+        # - api
         - e2e
 
         # include:
@@ -175,6 +175,8 @@ jobs:
       with:
         k8s-version: ${{ matrix.k8s-version }}
         kind-worker-count: 4
+        registry-authority: registry.local:5000
+
 
     - name: Install Dependencies
       run: |
