--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -307,14 +307,24 @@ jobs:
     - name: Setup local registry
       run: |
         # Run a registry.
+        # docker run -d --restart=always \
+        #   -v $HOME/artifacts/registry:/var/lib/registry \
+        #   -p $REGISTRY_PORT:$REGISTRY_PORT --name $REGISTRY_NAME registry:2
+        # # Connect the registry to the KinD network.
+        # docker network connect "kind" $REGISTRY_NAME
+        # # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
+        # # local registry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
+        # sudo echo "127.0.0.1 $REGISTRY_NAME" | sudo tee -a /etc/hosts
+
         docker run -d --restart=always \
           -v $HOME/artifacts/registry:/var/lib/registry \
-          -p $REGISTRY_PORT:$REGISTRY_PORT --name $REGISTRY_NAME-test registry:2
+          -p $5001:5001 --name $REGISTRY_NAME-test registry:2
         # Connect the registry to the KinD network.
         docker network connect "kind" $REGISTRY_NAME
         # Make the $REGISTRY_NAME -> 127.0.0.1, to tell `ko` to publish to
         # local registry, even when pushing $REGISTRY_NAME:$REGISTRY_PORT/some/image
         sudo echo "127.0.0.1 $REGISTRY_NAME-test" | sudo tee -a /etc/hosts
+
 
     - name: Install Serving & Ingress
       run: |
