--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -207,8 +207,8 @@ jobs:
 
 
     - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      # with:
+      #   fetch-depth: 0
 
     - uses: actions/download-artifact@v3
       with:
