--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -222,6 +222,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+          
 
     - uses: actions/download-artifact@v3
       with:
