--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -109,10 +109,10 @@ jobs:
         - v1.27.x
 
         ingress:
-        # - kourier
-        # - kourier-tls
-        - istio
-        #- contour
+          - kourier
+          - kourier-tls
+          - istio
+          - contour
         # Disabled due to consistent failures
         # - gateway_istio
 
@@ -144,15 +144,15 @@ jobs:
         #   test-flags: -enable-alpha
         #   namespace-resources: httproute
 
-        # - ingress: contour
-        #   namespace-resources: httpproxy
+        - ingress: contour
+          namespace-resources: httpproxy
 
         - ingress: istio
           namespace-resources: virtualservices
 
-        # - ingress: kourier-tls
-        #   ingress-class: kourier
-        #   enable-tls: 1
+        - ingress: kourier-tls
+          ingress-class: kourier
+          enable-tls: 1
 
         - test-suite: runtime
           test-path: ./test/conformance/runtime/...
